<resources>
    <string name="app_name">LMS</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">title_home</string>
    <string name="title_dashboard">title_dashboard</string>
    <string name="title_notifications">title_notification</string>
    <string name="Home">Home</string>
    <string name="Logout">Logout</string>
    <string name="FullScreen">FullScreen</string>
    <string name="Exit">Exit</string>
    <string name="About">About</string>
    <string name="ScreenShots">SreenShots</string>
    <string name="Screenshot">Screenshot</string>
</resources>
